file/map/ArcGISPro/GpMessages/659260546372300
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: miércoles, 18 de septiembre de 2024 7:03:44 a. m.</msg><msg code="539" type="100">ERROR 000539: ﻿  File "&lt;expression&gt;", line 1
    str(GPVARIANTOBJECT0.year)[:3]+'0')
                                      ^
﻿SyntaxError: unmatched ')'
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at miércoles, 18 de septiembre de 2024 7:03:45 a. m. (Elapsed Time: 0.10 seconds)</msg></messages>